force-app/main/default/objects/Record_Criteria__c/Record_Criteria__c.object-meta.xml
<CustomObject>
    <label>Record Criteria</label>
    <nameField>
        <label>Record Criteria  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>