force-app/main/default/objects/Record_Criteria__c/fields/Field_1__c.field-meta.xml
<CustomField>
    <fullName>Field_1__c</fullName>
    <description>This is the field of the Sobject record that is used to compare against</description>
    <label>Field 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>