force-app/main/default/objects/Record_Criteria__c/fields/Operation_1__c.field-meta.xml
<CustomField>
    <fullName>Operation_1__c</fullName>
    <description>This is the Operation that will take place. For example 

Field 1 Operation Value 1</description>
    <label>Operation 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>=&lt;</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>