force-app/main/default/objects/Record_Criteria__c/fields/Overall_Operation__c.field-meta.xml
<CustomField>
    <fullName>Overall_Operation__c</fullName>
    <label>Overall Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>