force-app/main/default/objects/Record_Criteria__c/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <label>SObject API Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>LLC_BI__Loan__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>