force-app/main/default/objects/Record_Criteria__c/fields/Value_1__c.field-meta.xml
<CustomField>
    <fullName>Value_1__c</fullName>
    <description>This will check with the operation type in Value 1</description>
    <label>Value 1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>