force-app/main/default/objects/Record_Criteria__c/fields/Value_2__c.field-meta.xml
<CustomField>
    <fullName>Value_2__c</fullName>
    <description>This will check with the operation type in Value 2</description>
    <label>Value 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>