force-app/main/default/objects/Record_Criteria__c/fields/Value_3__c.field-meta.xml
<CustomField>
    <fullName>Value_3__c</fullName>
    <description>This will check with the operation type in Value 3</description>
    <label>Value 3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>